# Flip7helper

./: .gitignore  Flip7Helper.spec  README.md  build_exe.ps1  run_flip7helper.py  setup.cfg
flip7helper/: __init__.py  calibrate.py  decision_engine.py  deck_engine.py  recognition_engine.py  state.py  ui_app.py  watch.py
