 [metadata]
 name = flip7helper
 version = 0.1.0
 description = Real-time probability helper for Flip 7 using OpenCV template matching.
 
 [options]
 packages = find:
 python_requires = >=3.10
 install_requires =
     opencv-python
     numpy
     watchdog
    mss
 
 [options.entry_points]
 console_scripts =
     flip7-watch = flip7helper.watch:main
    flip7-ui = flip7helper.ui_app:main
    flip7-calibrate = flip7helper.calibrate:main
 
